* Fix: Fixed bug with Top 5 Logins displaying all failed logins opposed to timeframe set by email frequency. * Fix: Fixed bug with /?author=N scan protection not working for authors with no published posts. * Improvement: Fixed Wordfence logo width in dashboard widget on smaller screens. * Improvement: Added country names to flag icons in widget dashboard. * Improvement: Updated issues email to use WordPress' charset instead of ISO-8859-1. * Improvement: Added check to see if premium API key is set to auto-renew and send email reminder prior to renewal. * Improvement: Updated to API version 2.17. * Improvement: Changed auto-renew reminder email to go out 10 days before renewal, 12 days before expiration.
git-svn-id: https://plugins.svn.wordpress.org/wordfence/trunk@1181413 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/activity-report-widget.css
+++ b/css/activity-report-widget.css
@@ -1,3 +1,6 @@
+#wordfence_activity_report_widget .wf-logo img {
+	max-width: 100%;
+}
 #wordfence_activity_report_widget .inside h1,
 #wordfence_activity_report_widget .inside h2,
 #wordfence_activity_report_widget .inside h3,
